# nonebot_plugin_nowtime

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
nonebot_plugin_nowtime/: __init__.py  config.py
nonebot_plugin_nowtime/config/: nowtime.json
nonebot_plugin_nowtime/resource/: time_words.json
