[tool.poetry]
name = "nonebot_plugin_nowtime"
version = "0.1.4"
description = "Nonebot2 plugin for telling the time per hour"
authors = ["Cvadia"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Cvandia/nonebot_plugin_nowtime"
repository = "https://github.com/Cvandia/nonebot_plugin_nowtime"

[tool.poetry.dependencies]
python = ">=3.7"
nonebot2 = ">=2.0.0-beta.1"
nonebot-adapter-onebot = ">=2.0.0-beta.1"
httpx = ">=0.19.0"
aiofiles = ">=0.7.0"
nonebot-plugin-apscheduler= ">=0.1.3"
requests = ">=2.28.1"
pydantic = ">=1.10.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"